--- a/source/slides/_2.md
+++ b/source/slides/_2.md
@@ -1,5 +1,5 @@
 I'm fortunate enough that I get to work with Dan Denney. He is one of my favorite people on this planet.
 
-The story I like to always tell that illustrates this is his encounter with HTML emails. I'm sure all of us here know how painful they are. You have to code in tables, use inline styles, and it's just generally not fun. All of our front-end developers just get in, do them, and get out. However, not for Dan Denney. Instead of pushing through and moving on, what did he do? He made our HTML emails awesome, pushed the technology, and now wears the crown of "HTML Email King."
+The story I like to always tell that illustrates this is his encounter with HTML emails. I'm sure all of us here know how painful they are. You have to code in tables, use inline styles, and it's just generally not fun. All of our front-end developers just get in, do them, and get out. However, not for Dan Denney. Instead of pushing through and moving on, what did he do? He made our HTML emails awesome, pushed the technology, talked about it in the community, and now wears the crown of "HTML Email King." (in my eyes)
 
 **He's truly a saint, and everyone needs to know that.**
